<?xml version="1.0"?>
<package format="2">
  <name>irl_2d_tb3_tools</name>
  <version>0.0.0</version>
  <description>The irl_2d_tb3_tools package</description>

  <maintainer email="a4aleem@todo.todo">a4aleem</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>nav_msgs</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>rospy</exec_depend>

  <export>

  </export>
</package>


